<resources>
    <string name="app_name">Pop hop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="favorit">favorit</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="img">img</string>
    <string name="textview">TextView</string>
    <string name="top_rated_movie">Top Rated Movie</string>
    <string name="pubular_movie">Pubular Movie</string>
    <string name="movie_name">movie name</string>
    <string name="_10">10</string>
    <string name="discover">Discover</string>
    <string name="adult">Adult</string>
    <string name="date">date</string>
    <string name="revenue">revenue</string>
    <string name="primary_release_date">primary release date</string>
    <string name="original_title">original title</string>
    <string name="vote_average">vote average</string>
    <string name="popularity">popularity</string>
    <string name="sort_by">Sort By</string>
    <string name="apply">Apply</string>
    <string name="vote_count">vote count</string>
    <string name="search">search</string>
    <string name="wonder_woman">Wonder woman</string>
    <string name="_9_3">9.3</string>
    <string name="adultd">adult :</string>

    <string name="yes">yes</string>
    <string name="release">release</string>
    <string name="releasex">release :</string>
    <string name="_2009_05_32">2009-05-32</string>
</resources>